<resources>
    <string name="app_name">Fluffy</string>

    <string name="instructions">Please select your level of pain on the scale from none (left) to maximum (right).</string>
    <string name="title_activity_file_manager">Result Manager</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="activity_email">Email</string>
    <string name="activity_delete">Delete</string>
    <string name="activity_clear">Clear Selection</string>
    <string name="title_activity_patient">Patient</string>

    <string name="patient">Patient</string>

    <string name="waiting">Waiting</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_assistant">Doctor</string>
    <string name="title_activity_patient_data">Patient Data</string>
    <string name="title_account_google_chooser">Google Account</string>

    <string name="activity_settings">Settings</string>
    <string name="activity_file_manager">Manage Results</string>
    <string name="activity_about">About</string>

    <string name="action_clear">Clear Selection</string>
    <string name="action_select">Select All</string>
    <string name="activity_edit_patient">Edit Patient File</string>
    <string name="action_email">Email File(s)</string>
    <string name="action_delete">Delete File(s)</string>
    <string name="action_sync">Sync Files(s) to Google</string>

    <string-array name="race_array">
        <item>-</item>
        <item>White/Caucasian</item>
        <item>Hispanic/Latino</item>
        <item>Black/African American</item>
        <item>Asian</item>
        <item>American Indian</item>
        <item>Pacific Islander</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_about">AboutActivity</string>

    <string name="about">Privacy Disclaimer</string>
        <string name="about_explanation">This app
         is designed by Matthew Guthaus at the UCSC Baskin School of Engineering in cooperation with University of Hawaii....</string>
    <string name="version_label">Version</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
