<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.ucsc.valsalva.FileSender">
    <item android:id="@+id/action_clear"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_clear"/>
    <item android:id="@+id/action_select"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_select"/>
    <item android:id="@+id/action_email"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_email"/>
    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_delete"/>

    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_launcher"
        android:title="@string/activity_edit_patient"/>
    <item android:id="@+id/action_sync"
        android:icon="@drawable/ic_launcher"
        android:title="@string/action_sync"/>
</menu>